# endoflife-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust-clippy.yml
examples/: all_details.rs  all_products.rs  file.rs  single_cycle_details.rs  url.rs
examples/data/: node.json  python.json  rust.json  ubuntu.json
src/: lib.rs  main.rs  product.rs
