[package]
name = "endoflife-rs"
version = "0.1.0"
authors = ["Antonio Farinetti <afarinetti@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
# nodejs-semver = { version = "4.1.0", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
# smvr = "0.1.3"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.5"
