[package]
name = "endoflife-rs"
version = "0.2.0"
authors = ["Antonio Farinetti"]
readme = "README.md"
repository = "https://github.com/afarinetti/endoflife-rs"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Rust based endoflife.date API client"
keywords = ["http", "request", "client"]
categories = ["web-programming::http-client"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
# nodejs-semver = { version = "4.1.0", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
# smvr = "0.1.3"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.5"

[dev-dependencies]
bytes = "1.9"
clap = { version = "4.5", features = ["derive", "unicode"] }
comfy-table = "7.1.3"
serde_json = "1.0"
